<resources>
    <string name="app_name">BusApp</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_trips">Your Trips</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
