<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_trips" />
        <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_signout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
